Part 2/Exercise 2.09/dailyToDos/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-reminder-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: todo-reminder
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
